--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "A web app for music fans who want to listen/share new music",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/",
+   "tdd": "mocha test/ -w -R min",
+   "cover": "nyc --reporter=lcov npm test",
+   "start": "node ./server/index.js",
+   "bundle:watch": "watchify ./server/index.js -vd -t babelify -o ./server/public/main.js",
+   "watch:server": "nodemon server",
+   "watch:client": "watchify ./client/index.js -vd -t babelify -o ./server/public/main.js",
+   "watch:sync": "browser-sync start -c sync.js",
+   "watch": "npm-run-all --parallel watch:*"
   },
   "repository": {
     "type": "git",
