--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "watchify": "^3.9.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^1.4.0",
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
