--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mime-types": "^2.1.17",
+    "mongodb": "^2.2.33",
     "multer": "^1.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
